# rv6-riscv-ekureina

./: .gitignore  Makefile
.cargo/: config.toml
kernel/: buf.h  console.c  defs.h  elf.h  entry.S  exec.c  fcntl.h  file.c  file.h  fs.h  kalloc.c  main.c  memlayout.h  param.h  pipe.c  printf.c  proc.c  proc.h  riscv.h  sleeplock.h  spinlock.c  spinlock.h  start.c  stat.h  syscall.c  syscall.h  sysfile.c  sysinfo.h  sysproc.c  trap.c  types.h  uart.c  virtio.h  virtio_disk.c  vm.c
kernel/rust/: Cargo.toml  build.rs
kernel/rust/src/: device_load.rs  exec.rs  fw_config.rs  interrupts.rs  kalloc.rs  lib.rs  printf.rs  proc.rs  riscv_asm.rs  sync.rs  syscall.rs  trap.rs  vm.rs
kernel/rust/src/dev/: console.rs  mod.rs  uart.rs
kernel/rust/src/sync/: mod.rs  sleeplock.rs  spinlock.rs
mkfs/: Cargo.toml  build.rs
mkfs/src/: main.rs
user/: cowtest.c  find.c  pingpong.c  primes.c  sleep.c  trace.c  ulib.c  user.h  usys.pl  xargs.c
user/rust/rv6_user/: Cargo.toml  build.rs
user/rust/rv6_user/src/: lib.rs
user/rust/shutdown/: Cargo.toml  build.rs
user/rust/shutdown/src/: lib.rs
