[package]
name = "mkfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive", "cargo", "env", "wrap_help"] }
bytemuck = { version = "1.14.0", features = ["derive"] }

[build-dependencies]
bindgen = "0.69.1"

[lints.clippy]
all = "deny"
pedantic = "warn"
