[package]
name = "rv6-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdt = "0.1.5"

[lib]
crate-type = ["staticlib"]
bench = false

[build-dependencies]
bindgen = "0.69.1"
cbindgen = "0.26.0"

[lints.rust]
nonstandard_style = "warn"
deprecated_in_future = "warn"
dead_code = "allow"

[lints.clippy]
all = "deny"
pedantic = "warn"
manual_assert = "allow"
