[package]
name = "rv6_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]
bench = false

[build-dependencies]
bindgen = "0.69.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints.rust]
nonstandard_style = "warn"
deprecated_in_future = "warn"
dead_code = "allow"

[lints.clippy]
all = "deny"
pedantic = "warn"

[dependencies]
